--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -1,13 +1,63 @@
 body {
-  background-image: url('...images/pattern1.png');
-  background-repeat: no-repeat; 
-  
-  #container {
-  	background-color: ed6c63;
-  	width: 700px;
-  	height: 400px;
-  	margin: 2 auto 0 auto;
+  background-image: url('../images/pattern1.png');
   }
+
+.container {
+  	background-color: #ed6c63;
+  	width: 700px;
+  	height: 100px;
+  	margin: 0 auto 0 auto;
+}
+
+.header {
+	padding: 10px 10px 20px 10px;
+}
+h1 {
+	color: white;
+	font-family: helvetica, arial, sans-serif;
+	font-size: 50px;
+	text-transform: uppercase;
+}
+
+h2 {
+
+	color: black;
+	font-size: 18px;
+	font-family: cursive, arial, sans-serif;
+	text-transform: uppercase;
+}
+
+.underlined {
+	text-decoration: underline; 
+}
+img {
+	max-width: 100%;
+	height: auto;
+}
+.main_copy{
+	background-color: white;
+	width: 700px;
+	height: 300px;
+	margin: 0 auto 0 auto;
+}
+
+.main_image {
+	width: 700px;
+}
+.small_img {
+	width: 20%;
+	height: auto;
+	padding: 5px;
+	border: 1px solid grey;
+}
+
+.bottom_bar {
+	background-color: #ed6c63;
+	width: 700px
+	hight 200px
+
+}
+
 }
 
 /* 
